# django-nuxt-swarm-ci-cd

./: .gitignore  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/apps/authentication/: apps.py  serializers.py  urls.py  views.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py
backend/settings/: base.py  urls.py
