[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matteo Pizzoli <matteo.pizzoli89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
